add a end_balance field to Transaction
