# api/openapi.yml
@@ -3398,6 +3398,7 @@ components:
         - hash
         - lt
         - account
+        - end_balance
         - success
         - utime
         - orig_status
@@ -3432,6 +3433,10 @@ components:
         end_status:
           $ref: '#/components/schemas/AccountStatus'
         total_fees:
+          type: integer
+          format: int64
+          example: 25713146000001
+        end_balance:
           type: integer
           format: int64
           example: 25713146000001
